test_api_output_utf8.txt
node.exe : [baseline-browser-mapping] The data 
in this module is over two months old.  To 
ensure accurate Baseline data, please update: 
`npm i baseline-browser-mapping@latest -D`
At C:\Program Files\nodejs\npx.ps1:29 char:3
+   & $NODE_EXE $NPX_CLI_JS $args
+   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: ([ba 
   seline-brows...ping@latest -D`:String) [], R  
  emoteException
    + FullyQualifiedErrorId : NativeCommandError
 
FAIL 
__tests__/components/FacultyScreen/api.test.ts
  ΓùÅ Test suite failed to run

    SyntaxError: D:\bkdocs-frontend\__tests__\com
ponents\FacultyScreen\api.test.ts: Unexpected 
token, expected "," (26:25)

    [0m [90m 24 |[39m
     [90m 25 |[39m [36mconst[39m wrapper 
[33m=[39m ({ children }[33m:[39m { 
children[33m:[39m 
[33mReact[39m[33m.[39m[33mReactNode[39m }) 
[33m=>[39m (
    [31m[1m>[22m[39m[90m 26 |[39m     
[33m<[39m[33mQueryClientProvider[39m 
client[33m=[39m { queryClient } [33m>[39m { 
children } [33m<[39m[33m/[39m[33mQueryClient
Provider[39m[33m>[39m
     [90m    |[39m                          
[31m[1m^[22m[39m
     [90m 27 |[39m )[33m;[39m
     [90m 28 |[39m
     [90m 29 |[39m 
describe([32m'FacultyScreen API 
Hooks'[39m[33m,[39m () [33m=>[39m {[0m

      at constructor (node_modules/@babel/parser/
src/parse-error.ts:95:45)
      at TypeScriptParserMixin.toParseError [as 
raise] (node_modules/@babel/parser/src/tokenizer/
index.ts:1507:19)
      at TypeScriptParserMixin.raise [as 
unexpected] (node_modules/@babel/parser/src/token
izer/index.ts:1547:16)
      at TypeScriptParserMixin.unexpected [as 
expect] (node_modules/@babel/parser/src/parser/ut
il.ts:157:12)
      at TypeScriptParserMixin.expect [as 
tsParseDelimitedListWorker] (node_modules/@babel/
parser/src/plugins/typescript/index.ts:548:16)
      at 
TypeScriptParserMixin.tsParseDelimitedListWorker 
[as tsParseDelimitedList] (node_modules/@babel/pa
rser/src/plugins/typescript/index.ts:501:14)
      at 
TypeScriptParserMixin.tsParseDelimitedList (node_
modules/@babel/parser/src/plugins/typescript/inde
x.ts:577:27)
      at 
TypeScriptParserMixin.tsParseBracketedList [as 
tsParseTypeParameters] (node_modules/@babel/parse
r/src/plugins/typescript/index.ts:830:26)
      at tsParseTypeParameters (node_modules/@bab
el/parser/src/plugins/typescript/index.ts:3761:31
)
      at TypeScriptParserMixin.fn [as tryParse] (
node_modules/@babel/parser/src/parser/util.ts:174
:20)
      at TypeScriptParserMixin.tryParse [as 
parseMaybeAssign] (node_modules/@babel/parser/src
/plugins/typescript/index.ts:3759:26)
      at parseMaybeAssign (node_modules/@babel/pa
rser/src/parser/expression.ts:257:12)
      at TypeScriptParserMixin.callback [as 
allowInAnd] (node_modules/@babel/parser/src/parse
r/expression.ts:3202:12)
      at TypeScriptParserMixin.allowInAnd [as 
parseMaybeAssignAllowIn] (node_modules/@babel/par
ser/src/parser/expression.ts:256:17)
      at 
TypeScriptParserMixin.parseMaybeAssignAllowIn 
[as parseMaybeAssignAllowInOrVoidPattern] (node_m
odules/@babel/parser/src/parser/expression.ts:331
6:17)
      at TypeScriptParserMixin.parseMaybeAssignAl
lowInOrVoidPattern [as 
parseParenAndDistinguishExpression] (node_modules
/@babel/parser/src/parser/expression.ts:1822:16)
      at TypeScriptParserMixin.parseParenAndDisti
nguishExpression [as parseExprAtom] (node_modules
/@babel/parser/src/parser/expression.ts:1170:21)
      at TypeScriptParserMixin.parseExprAtom [as 
parseExprSubscripts] (node_modules/@babel/parser/
src/parser/expression.ts:742:23)
      at 
TypeScriptParserMixin.parseExprSubscripts [as 
parseUpdate] (node_modules/@babel/parser/src/pars
er/expression.ts:721:21)
      at TypeScriptParserMixin.parseUpdate (node_
modules/@babel/parser/src/parser/expression.ts:68
3:23)
      at TypeScriptParserMixin.parseMaybeUnary (n
ode_modules/@babel/parser/src/plugins/typescript/
index.ts:3876:20)
      at TypeScriptParserMixin.parseMaybeUnary 
[as parseMaybeUnaryOrPrivate] (node_modules/@babe
l/parser/src/parser/expression.ts:417:14)
      at 
TypeScriptParserMixin.parseMaybeUnaryOrPrivate 
[as parseExprOps] (node_modules/@babel/parser/src
/parser/expression.ts:429:23)
      at TypeScriptParserMixin.parseExprOps [as 
parseMaybeConditional] (node_modules/@babel/parse
r/src/parser/expression.ts:384:23)
      at 
TypeScriptParserMixin.parseMaybeConditional (node
_modules/@babel/parser/src/parser/expression.ts:3
01:21)
      at TypeScriptParserMixin.parseMaybeAssign (
node_modules/@babel/parser/src/plugins/typescript
/index.ts:3747:22)
      at TypeScriptParserMixin.parseMaybeAssign 
[as parseFunctionBody] (node_modules/@babel/parse
r/src/parser/expression.ts:2612:14)
      at TypeScriptParserMixin.parseFunctionBody 
[as parseArrowExpression] (node_modules/@babel/pa
rser/src/parser/expression.ts:2563:10)
      at 
TypeScriptParserMixin.parseArrowExpression [as 
parseParenAndDistinguishExpression] (node_modules
/@babel/parser/src/parser/expression.ts:1847:12)
      at TypeScriptParserMixin.parseParenAndDisti
nguishExpression [as parseExprAtom] (node_modules
/@babel/parser/src/parser/expression.ts:1170:21)
      at TypeScriptParserMixin.parseExprAtom [as 
parseExprSubscripts] (node_modules/@babel/parser/
src/parser/expression.ts:742:23)
      at 
TypeScriptParserMixin.parseExprSubscripts [as 
parseUpdate] (node_modules/@babel/parser/src/pars
er/expression.ts:721:21)
      at TypeScriptParserMixin.parseUpdate (node_
modules/@babel/parser/src/parser/expression.ts:68
3:23)
      at TypeScriptParserMixin.parseMaybeUnary (n
ode_modules/@babel/parser/src/plugins/typescript/
index.ts:3876:20)
      at TypeScriptParserMixin.parseMaybeUnary 
[as parseMaybeUnaryOrPrivate] (node_modules/@babe
l/parser/src/parser/expression.ts:417:14)
      at 
TypeScriptParserMixin.parseMaybeUnaryOrPrivate 
[as parseExprOps] (node_modules/@babel/parser/src
/parser/expression.ts:429:23)
      at TypeScriptParserMixin.parseExprOps [as 
parseMaybeConditional] (node_modules/@babel/parse
r/src/parser/expression.ts:384:23)
      at 
TypeScriptParserMixin.parseMaybeConditional (node
_modules/@babel/parser/src/parser/expression.ts:3
01:21)
      at TypeScriptParserMixin.parseMaybeAssign (
node_modules/@babel/parser/src/plugins/typescript
/index.ts:3747:22)
      at parseMaybeAssign (node_modules/@babel/pa
rser/src/parser/expression.ts:257:12)
      at TypeScriptParserMixin.callback [as 
allowInAnd] (node_modules/@babel/parser/src/parse
r/expression.ts:3197:16)
      at TypeScriptParserMixin.allowInAnd [as 
parseMaybeAssignAllowIn] (node_modules/@babel/par
ser/src/parser/expression.ts:256:17)
      at 
TypeScriptParserMixin.parseMaybeAssignAllowIn 
[as parseVar] (node_modules/@babel/parser/src/par
ser/statement.ts:1587:18)
      at TypeScriptParserMixin.parseVar (node_mod
ules/@babel/parser/src/parser/statement.ts:1251:1
0)
      at TypeScriptParserMixin.parseVarStatement 
(node_modules/@babel/parser/src/plugins/typescrip
t/index.ts:3088:33)
      at TypeScriptParserMixin.parseVarStatement 
(node_modules/@babel/parser/src/parser/statement.
ts:612:21)
      at 
TypeScriptParserMixin.parseStatementContent (node
_modules/@babel/parser/src/plugins/typescript/ind
ex.ts:3223:20)
      at 
TypeScriptParserMixin.parseStatementContent [as 
parseStatementLike] (node_modules/@babel/parser/s
rc/parser/statement.ts:482:17)
      at 
TypeScriptParserMixin.parseStatementLike [as 
parseModuleItem] (node_modules/@babel/parser/src/
parser/statement.ts:419:17)
      at TypeScriptParserMixin.parseModuleItem 
[as parseBlockOrModuleBlockBody] (node_modules/@b
abel/parser/src/parser/statement.ts:1443:16)
      at TypeScriptParserMixin.parseBlockOrModule
BlockBody [as parseBlockBody] (node_modules/@babe
l/parser/src/parser/statement.ts:1417:10)
      at TypeScriptParserMixin.parseBlockBody 
[as parseProgram] (node_modules/@babel/parser/src
/parser/statement.ts:229:10)
      at TypeScriptParserMixin.parseProgram [as 
parseTopLevel] (node_modules/@babel/parser/src/pa
rser/statement.ts:203:25)
      at TypeScriptParserMixin.parseTopLevel (nod
e_modules/@babel/parser/src/parser/index.ts:88:25
)
      at TypeScriptParserMixin.parse (node_module
s/@babel/parser/src/plugins/typescript/index.ts:4
337:20)
      at parse 
(node_modules/@babel/parser/src/index.ts:86:38)
      at parser (node_modules/@babel/core/src/par
ser/index.ts:29:19)
          at parser.next (<anonymous>)
      at normalizeFile (node_modules/@babel/core/
src/transformation/normalize-file.ts:50:24)
          at normalizeFile.next (<anonymous>)
      at run (node_modules/@babel/core/src/transf
ormation/index.ts:41:36)
          at run.next (<anonymous>)
      at transform 
(node_modules/@babel/core/src/transform.ts:29:20)
          at transform.next (<anonymous>)
      at evaluateSync 
(node_modules/gensync/index.js:251:28)
      at sync 
(node_modules/gensync/index.js:89:14)
      at fn (node_modules/@babel/core/src/errors/
rewrite-stack-trace.ts:99:14)
      at transformSync 
(node_modules/@babel/core/src/transform.ts:66:52)
      at ScriptTransformer.transformSource (node_
modules/@jest/transform/build/ScriptTransformer.j
s:545:31)
      at 
ScriptTransformer._transformAndBuildScript (node_
modules/@jest/transform/build/ScriptTransformer.j
s:674:40)
      at ScriptTransformer.transform (node_module
s/@jest/transform/build/ScriptTransformer.js:726:
19)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        1.653 s
Ran all test suites matching /__tests__\\componen
ts\\FacultyScreen\\api.test.ts/i.
